# dumap

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml
crates/diskmap-cli/: Cargo.toml
crates/diskmap-cli/src/: main.rs
crates/diskmap-core/: Cargo.toml
crates/diskmap-core/src/: category.rs  html.rs  html_tests.rs  lib.rs
crates/diskmap-core/src/scan/: walker.rs  walker_tests.rs
crates/diskmap-core/src/tree/: mod.rs  node.rs  node_tests.rs
crates/diskmap-gui/: Cargo.toml
crates/diskmap-gui/src/: app.rs  color.rs  lib.rs  navigation.rs  navigation_tests.rs
crates/diskmap-layout/: Cargo.toml
crates/diskmap-layout/src/: rect_tests.rs  squarify.rs  squarify_tests.rs
crates/dumap/: Cargo.toml
crates/dumap-cli/: Cargo.toml
crates/dumap-cli/src/: lib.rs  main.rs  main_tests.rs
crates/dumap-core/: Cargo.toml
crates/dumap-core/src/: category.rs  category_tests.rs  error.rs  html.rs  html_tests.rs  lib.rs  path_util.rs  path_util_tests.rs
crates/dumap-core/src/scan/: mod.rs  walker.rs  walker_tests.rs
crates/dumap-core/src/tree/: arena.rs  arena_tests.rs  mod.rs
crates/dumap-gui/: Cargo.toml
crates/dumap-gui/src/: app.rs  app_tests.rs  color.rs  color_tests.rs  lib.rs  navigation.rs  navigation_tests.rs
crates/dumap-layout/: Cargo.toml
crates/dumap-layout/src/: lib.rs  rect.rs  squarify.rs  squarify_tests.rs
crates/dumap/src/: main.rs
docs/: RELEASE_NOTES_1.1.md
