[workspace]
resolver = "2"
members = [
    "crates/diskmap-core",
    "crates/diskmap-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
authors = ["James Howard <jrobhoward@gmail.com>"]

[workspace.lints.clippy]
cognitive_complexity = "warn"
unwrap_used = "warn"
expect_used = "warn"

[workspace.dependencies]
# Internal crates
diskmap-core = { path = "crates/diskmap-core" }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File scanning
ignore = "0.4"

# Concurrency
rayon = "1"
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# Utilities
open = "5"

# Dev dependencies
proptest = "1"
rstest = "0.26"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
