[workspace]
resolver = "2"
members = [
    "crates/dumap-core",
    "crates/dumap-layout",
    "crates/dumap-gui",
    "crates/dumap-cli",
    "crates/dumap",
]

[workspace.package]
version = "1.1.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
authors = ["James Howard <jrobhoward@gmail.com>"]
repository = "https://github.com/jrobhoward/dumap"
homepage = "https://github.com/jrobhoward/dumap"
readme = "README.md"
keywords = ["disk-usage", "treemap", "visualization", "filesystem"]
categories = ["command-line-utilities", "filesystem", "visualization"]

[workspace.lints.clippy]
cognitive_complexity = "warn"
unwrap_used = "warn"
expect_used = "warn"

[workspace.dependencies]
# Internal crates
dumap-cli = { path = "crates/dumap-cli", version = "1.1.0" }
dumap-core = { path = "crates/dumap-core", version = "1.1.0" }
dumap-layout = { path = "crates/dumap-layout", version = "1.1.0" }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File scanning
ignore = "0.4"

# Concurrency
rayon = "1"
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# GUI
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.33"

# Utilities
open = "5"

# Dev dependencies
proptest = "1"
rstest = "0.26"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
