[package]
name = "diskmap-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI tool for diskmap: scan directories and visualize disk usage as interactive treemaps"

[[bin]]
name = "diskmap"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
diskmap-core = { workspace = true }
diskmap-gui = { path = "../diskmap-gui" }
clap = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
open = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
