[package]
name = "diskmap-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI tool for diskmap: scan directories and visualize disk usage as interactive treemaps"

[[bin]]
name = "diskmap"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = ["gui"]
gui = ["dep:diskmap-gui", "dep:eframe", "dep:egui"]

[dependencies]
diskmap-core = { workspace = true }
diskmap-gui = { path = "../diskmap-gui", optional = true }
clap = { workspace = true }
eframe = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
open = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
