[package]
name = "diskmap-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for diskmap: filesystem scanning, tree construction, and HTML treemap generation"

[lints]
workspace = true

[dependencies]
ignore = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
