[package]
name = "diskmap-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Interactive egui treemap viewer for diskmap"

[lints]
workspace = true

[dependencies]
diskmap-core = { workspace = true }
diskmap-layout = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
