[package]
name = "diskmap-layout"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Squarified treemap layout algorithm for diskmap"

[lints]
workspace = true

[dependencies]
diskmap-core = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
