[package]
name = "dumap-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
description = "CLI tool for dumap: scan directories and visualize disk usage as interactive treemaps"

[[bin]]
name = "dumap"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = ["gui"]
gui = ["dep:dumap-gui", "dep:eframe", "dep:egui"]

[dependencies]
dirs = "6"
dumap-core = { workspace = true }
dumap-gui = { path = "../dumap-gui", optional = true }
clap = { workspace = true }
eframe = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
open = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
