[package]
name = "dumap-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
description = "Core library for dumap: filesystem scanning, tree construction, and HTML treemap generation"

[lints]
workspace = true

[dependencies]
ignore = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
