[package]
name = "dumap-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Interactive egui treemap viewer for dumap"

[lints]
workspace = true

[dependencies]
dumap-core = { workspace = true }
dumap-layout = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
