[package]
name = "dumap-layout"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
description = "Squarified treemap layout algorithm for dumap"

[lints]
workspace = true

[dependencies]
dumap-core = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
